[package]
name = "xor-keysize-guess"
version = "1.0.0"
authors = ["gavyn <gavyn.riebau@gmail.com>"]
description = "Command line app to guess the size of a key that was used to XOR encrypt a file"
documentation = "https://github.com/gavynriebau/xor-keysize-guess"
homepage = "https://github.com/gavynriebau/xor-keysize-guess"
repository = "https://github.com/gavynriebau/xor-keysize-guess"
keywords = ["XOR", "cryptography", "cli"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
hamming = "0.1.3"
clap = "2.24.1"
log = "0.3.7"
env_logger = "0.4.2"
