[package]
name = "xor-keysize-guess"
version = "1.0.1"
authors = ["gavyn <gavyn.riebau@gmail.com>"]
description = "Command line app to guess the size of a key that was used to XOR encrypt a file"
documentation = "https://github.com/gavynriebau/xor-keysize-guess"
homepage = "https://github.com/gavynriebau/xor-keysize-guess"
repository = "https://github.com/gavynriebau/xor-keysize-guess"
keywords = ["XOR", "cryptography", "cli"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
xor-utils = "0.3.0"
clap = "2.24.1"
env_logger = "0.4.3"
log = "0.3.8"
